CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_16_20250812_1127.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=16 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_global_while_not_hash.exe aco_cuda_global_while_not_hash.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=16 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_global_while_not_hash.cu(1559): error: identifier "HashEntry" is undefined
          GlobalMem = GlobalMem - sizeof(double) * 2 - sizeof(int) - 512 * sizeof(double) - 1048576 * sizeof(HashEntry);
                                                                                                             ^

aco_cuda_global_while_not_hash.cu(1618): error: identifier "HashEntry" is undefined
          std::cout << "GPU Global Memory Hash Table: " << 1048576 * sizeof(HashEntry) / (1024.0 * 1024.0) << " MB" << std::endl;
                                                                            ^

2 errors detected in the compilation of "aco_cuda_global_while_not_hash.cu".
aco_cuda_global_while_not_hash.cu
========== COMPILATION END ========== 
Exit code: 2 
